# cs-rep-receipts-lookup

./: .databricks-resources.json  .gitignore  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  MIGRATION_UC_RBAC.md  OPTIMIZATION_PLAN.md  README.md  SCHEMA_FIX_SUMMARY.md  TEST_DATA_LOADED.md  TEST_USER_ACCESS.md  TRANSFORMATION_COMPLETE.md  UNITY_CATALOG_GOVERNANCE.md  app.yaml  architecture.excalidraw  databricks.yml  pyproject.toml  requirements.txt
ai/: nl_search_agent.py
app/: app.yaml  app.yaml.backup  cache_utils.py  db_utils.py  main.py  nl_search_agent.py  requirements.txt  response_utils.py  simple_test.py  test_minimal.py
config/: settings.py
docs/: ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT_LESSONS_LEARNED.md  PRE_DEPLOYMENT_VERIFICATION.md  TROUBLESHOOTING_GUIDE.md
examples/: acme_retail_deployment.md  parameterization_verification.md
infra/: add_line_items_table.sql  add_search_indexes.py  bulk_generate_receipts.py  lakebase_setup.sql  populate_line_items.py  regenerate_embeddings.py  regenerate_line_items.py  uc_quick_setup.sql  uc_rbac_setup.sql  unity_catalog_setup.sql  zerobus_client.py
notebooks/: migrate_lakebase_to_delta.py
pipelines/: bronze_receipt_ingest.py  gold_receipt_insights.py  silver_receipt_transform.py  sync_to_lakebase.py
pos_integration/: dual_write_handler.py  models.py
scripts/: MIGRATION_README.md  README.md  check_debug.py  check_health.py  create_sp_role.py  deploy_uc_native.sh  generate_test_data.py  migrate_lakebase_to_delta.py  quick_schema_setup.sh  rewrite_commit.py  set_sp_security_label.py  setup_infrastructure.py  (+6 more)
(+44 files in other folders)
